objects/Car_Service__c.object
<CustomObject>
    <fields>
        <fullName>CarId__c</fullName>
        <label>Car</label>
        <referenceTo>Car__c</referenceTo>
        <relationshipLabel>Car Services</relationshipLabel>
        <relationshipName>Car_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Car_Service_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Car Service Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Car Service</label>
    <nameField>
        <label>Car Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>